--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,7 +1,11 @@
-footer {
+.foot {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 60px;
     width: 100%;
     bottom: 0;
     text-align: center;
     border-top: 1px solid #dddddd;
+    position: relative;
 }
