--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -138,8 +138,9 @@ body {
     margin: 0;
     padding: 0;
     color: #484848;
-    font-size: 14px;
+    font-size: 0.85rem;
     font-family: Circular, "Helvetica Neue", Arial, Helvetica, sans-serif;
+
 }
 
 
