--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -1,10 +1,11 @@
 .filters {
-    display: grid;
+    position: relative;
     background-color: white;
     height: 70px;
     width: 100%;
     border: 1px solid #DDDDDD;
-    border-radius: 1px
+    border-radius: 1px;
+    align-items: center;
 }
 
 .filters button {
@@ -17,37 +18,41 @@
     width: 20%;
     border: none;
     border-radius: 4px;
-    opacity: 50%;
-    margin-right: 30px;
+    opacity: 70%;
+    right: 30px;
+    box-sizing: border-box;
+    position: absolute;
+    cursor: pointer;
 }
 
 .filters button:hover {
-    opacity: 90%;
+    opacity: 100%;
 }
 
-.amenities {
-    height: 60%;
-    width: 40%;
-    border-left: 1px solid #DDDDDD;
+.filters .amenities {
+    height: 40px;
+    width: 32%;
     text-align: center;
-    margin-top: -55px;
-    margin-left: 39%;
-    padding-top: 20px;
     font-weight: 600;
+    position: absolute;
+    margin-left: 40%;
+    margin-top: 0px;
+    padding-top: 31px;
 }
 
-.locations {
-    height: 60%;
-    width: 39%;
+.filters .locations {
+    height: 30px;
+    width: 39.9%;
     text-align: center;
-    margin-top: -64px;
-    margin-left: 0;
-    padding-top: 20px;
     font-weight: 600;
+    border-right: 1px solid #DDDDDD;
+    position: absolute;
+    padding-top: 26px;
+    margin-top: 6px;
 }
 
 .amenities h4 {
-    font-weight: 400;
+    font-weight: 100;
 }
 
 .locations h4 {
@@ -56,7 +61,7 @@
 
 .popover {
     display: none;
-    background-color: #dddddd;
+    background-color: #fafafa;
     width: 100.5%;
     border-left: 1px solid #dddddd;
     border-right: 1px solid #dddddd;
@@ -66,9 +71,38 @@
 
 .locations:hover>.popover {
     display: block;
+    cursor: pointer;
 }
 
 .amenities:hover>.popover {
     display: block;
+    cursor: pointer;
 }
 
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.font {
+    font-size: 0.8rem;
+}
+
+.locations:hover>.popover h2 {
+    font-size: 1rem;
+    line-height: 2rem;
+    font-weight: 600;
+}
+
+.amenities:hover>.popover li {
+    font-size: 1rem;
+    line-height: 2rem;
+    font-weight: 100;
+}
+
+.locations:hover>.popover li {
+    font-size: 0.9rem;
+    line-height: 2rem;
+    font-weight: 100;
+}
