--- a/web_static/styles/8-places.css
+++ b/web_static/styles/8-places.css
@@ -1,84 +1,238 @@
+.text-place {
+    font-weight: 600;
+    font-size: 20px;
+    margin-top: 30px;
+}
+
 .places {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
-    font-weight: 600;
-    font-size: 20px;
-}
-
-.tiny {
-    display: block;
-    width: 300px;
-    border: 1px solid #ff5a5f;
-    margin-top: 35px;
-    text-align: center;
-    padding-top: 20px;
-    border-radius: 4px;
-    margin-right: 60px;
+    justify-content: space-around;
 }
 
 .home {
-    display: block
-    width: 350px;
-    border: 1px solid #ff5a5f;
-    margin-top: 35px;
-    text-align: center;
-    padding-top: 20px;
-    border-radius: 4px;
-    margin-right: 60px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: 0.1em solid #FF5A5F;
+    width: 40%;
+    height: 905px;
+    margin-bottom: 10px;
 }
 
 .suite {
-    flex: 0 0 calc(33.33% - 40px);
-    border: 1px solid #ff5a5f;
-    text-align: center;
-    padding-top: 10px;
-    border-radius: 4px;
-    margin-top: 20px;
-    margin-left: 35px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: 0.1em solid #FF5A5F;
+    width: 40%;
+    height: 70px;
 }
-.text-home {
-   margin-top: 20px;
-   margin-left: 30%;
+
+.luxury{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    border: 0.1em solid #FF5A5F;
+    width: 40%;
+    height: 70px;
+}
+
+.home-top {
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 100px;
+    justify-content: space-evenly;
+    width: 98%;
+    overflow-wrap: normal;
+    margin-left: 3px;
+}
+
+.home-text {
+    width: 50%;
+    height: 5rem;
+    text-align: right;
+    font-weight: 200;
+    font-size: 1.3rem;
+    justify-content: center;
+    align-items: center;
+    overflow-wrap: break-word;
+    display: flex;
 }
 
 .dollar {
-    border: 2px solid #ff5a5f;
-    padding-top: 20px;
-    margin-top: 3px;
-    width: 18%;
-    color: #ff5a5f;
-    border-radius: 32px;
-    height: 35px;
+    width: 17%;
+    height: 4rem;
+    font-size: 1.4rem;
+    border-radius: 4rem;
+    color: #FF5A5F;
+    border: 0.156rem solid #FF5A5F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow-wrap: break-word;
 }
 
-.dollar1 {
-    border: 2px solid #ff5a5f;
-    padding-top: 20px;
-    margin-top: 3px;
-    width: 18%;
-    color: #ff5a5f;
-    border-radius: 32px;
-    height: 35px;
+.img_style {
+    margin-top: 5px;
+    height: 4rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
-.text-tiny {
-    margin-top: 20px;
-    margin-left: 30%;
+
+.img1 {
+    background-image: url('../images/icon_bed.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 15%;
 }
 
-.dollar2 {
-    border: 2px solid #ff5a5f;
-    padding-top: 20px;
-    margin-top: 3px;
-    width: 18%;
-    color: #ff5a5f;
-    border-radius: 32px;
-    height: 35px;
+.img2 {
+    background-image: url('../images/icon_bath.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 15%;
 }
 
-.text-suite {
-    margin-top: 20px;
-    margin-left: 30%;
+.img3 {
+    background-image: url('../images/icon_group.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 15%;
 }
 
+.info {
+    height: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    width: 100%;
+}
+.space {
+    width: 20%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 5px;
+}
+
+.owner {
+    margin-top: 10%;
+    height: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
+    margin-left: 3px;
+}
+
+.owner p {
+    font-weight: 200;
+    font-size: 0.9rem;
+}
+
+.description {
+    margin-top: 10px;
+    height: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
+    margin-left: 3px;
+}
+
+strong {
+    font-weight: 600;
+}
+
+.describe{
+    margin-top: 10px;
+}
+
+.amen {
+    margin-top: 10%;
+    height: 13rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: left;
+    width: 100%;
+    margin-left: 3px;
+}
+
+.img4 {
+    background-image: url('../images/icon_tv.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 30%;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.tv {
+    width: 50%;
+    margin-left: 5rem;
+    font-size: 0.8rem;
+    margin-top: -2rem;
+    height: 20px;
+  
+}
+.img5 {
+    background-image: url('../images/icon_wifi.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 30%;
+    margin-left: 5px;
+    margin-top: 5px;
+   
+}
+.wifi {
+    font-size: 0.8rem;
+    width: 50%;
+    margin-left: 5rem;
+    margin-top: -2rem;
+    height: 20px;
+
+    
+}
+.img6 {
+    background-image: url('../images/icon_pets.png');
+    background-repeat: no-repeat;
+    height: 50px;
+    width: 30%;
+    margin-left: 5px;
+    margin-top: 5px;
+}
+
+.Pet {
+    font-size: 0.8rem;
+    width: 50%;
+    margin-left: 5rem;
+    margin-top: -2rem;
+    height: 20px;
+}
+
+.reviews {
+    border-bottom: 1px solid #ddd;
+    height: 1rem;
+}
+.rev-msg {
+    margin-top: 5%;
+    margin-left: 10px;
+}
+.msg {
+    line-height: 1rem;
+}
